--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.1",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@fortawesome/vue-fontawesome": "^2.0.0",
-    "axios": "^0.21.0",
-    "bootstrap": "^4.5.3",
-    "jquery": "^3.5.1",
+    "@tailwindcss/forms": "^0.2.1",
+    "@tailwindcss/postcss7-compat": "^2.0.2",
+    "@tailwindcss/typography": "^0.4.0",
+    "autoprefixer": "^9.8.6",
+    "axios": "^0.21.1",
     "js-cookie": "^2.2.1",
-    "popper.js": "^1.16.1",
+    "postcss": "^7.0.35",
     "sweetalert2": "^10.9.0",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2",
     "vform": "^1.0.1",
     "vue": "^2.6.12",
     "vue-i18n": "^8.22.1",
@@ -43,7 +46,7 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.2",
     "eslint-plugin-vue": "^7.1.0",
-    "laravel-mix": "^5.0.7",
+    "laravel-mix": "^5.0.9",
     "laravel-mix-versionhash": "^1.1.7",
     "resolve-url-loader": "^3.1.2",
     "sass": "^1.28.0",
